# sinan-godata-adapter

./: .gitignore  README.md  main.py  pyproject.toml
core/: _init_.py  add_sinan_case.py  base_processor.py  entities.py  godata_location_translator.py  location_solver.py  logger.py  mapper.py  sinan_case_mapper.py  sinan_processor.py  utils.py
core/adapters/: __init__.py  api_client.py  case_json_writer.py  case_uploader.py  godata_location_translator.py  godata_outbreak_translator.py  ibge_location_id_translator.py  xlsx_reader.py
core/adapters/translation/: __init__.py  address_type_map.py  document_map.py  gender_map.py  pregnancy_map.py  translation_registry.py
core/app/: __init__.py
core/app/services/: preprocessor.py
core/app/use_cases/: __init__.py  import_sinan_data.py
core/domain/: models.py  ports.py
core/domain/diseases/: __init__.py  disease_registry.py
core/domain/diseases/modules/: __init__.py  sarampo.py
core/domain/services/: __init__.py  disease_mapper.py  godata_mapper.py  sinan_mapper.py
core/infra/: __init__.py  auth.py  client.py
core/mappers/: __init__.py  address_type_map.py  classification_map.py  document_map.py  gender_map.py  location_id_mapper.py  pregnancy_map.py  residence_mapper.py  translation_registry.py
core/translation/: __init__.py  address_type_map.py  classification_map.py  document_map.py  gender_map.py  pregnancy_map.py  registry.py
diseases/sarampo/: __init__.py  mapping.py  processor.py
