[tool.poetry]
name = "sinan-godata-adapter"
version = "0.1.0"
description = "Integração entre SINAN e GoData"
authors = ["Alvaro Luz <alvaroluz2001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.5"
pydantic = "^2.12.0"
dbfread = "^2.0.7"
python-dotenv = "^1.1.1"
pandas = "^2.3.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

